--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "firebase": "^11.2.0",
     "framer-motion": "^12.3.1",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-intersection-observer": "^9.15.1",
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-swipeable-views": "^0.14.0",
